--- a/frontends/gomeeki-app/src/index.html
+++ b/frontends/gomeeki-app/src/index.html
@@ -18,6 +18,7 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk7Jw6J4cG7enBj3fq2T8dYx3_rwd0cV4&async=defer"></script>
   </head>
   <body>
     <!--[if lt IE 10]>
